--- a/one/src/main/resources/application.yml
+++ b/one/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
   cloud:
     nacos:
       server-addr: localhost:8848
+  redis:
+    port: 6379
+    password: 1234
+    host: 192.168.239.100
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
