--- a/one/src/main/resources/bootstrap.yml
+++ b/one/src/main/resources/bootstrap.yml
@@ -1,1 +1,17 @@
-.
+server:
+  port: 8608
+spring:
+  application:
+    name: blogService
+  profiles:
+    active: dev
+  cloud:
+    nacos:
+      server-addr: localhost:8848 #nacos地址
+      config:
+        file-extension: yaml
+        namespace: a9b1c01f-601c-4c19-8843-d6a206131b2c
+
+
+
+
