--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>gateway</module>
         <module>two</module>
         <module>feign-api</module>
+        <module>es</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -30,10 +31,16 @@
         <spring-cloud.version>Hoxton.SR10</spring-cloud.version>
         <mysql.version>5.1.47</mysql.version>
         <mybatis.version>2.1.1</mybatis.version>
+        <hutool.version>5.8.11</hutool.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
             <!-- springCloud -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
